--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
-name = "seguro"
+name = "seguro1"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11.9"
+python = "^3.12"
 pandas = "^2.2.2"
+scikit-learn = "^1.5.1"
 
 
 [build-system]
